# VidDataTrainCrop

./: Cargo.toml  README.md
.github/workflows/: rust_build.yaml
src/: main.rs
